Compiler Bouw/compiler/test/basic/stephen/fail/var_after_fun.cvc
// Should produce a syntax validity error because a vardec is after a fundef.

#include "civic.h"

export int main() {
    void kaas() {
        printInt(6);
    }

    int a = 0;

    return 0;
}
